# recommend

./: Makefile
backend/: .flake8  Makefile  pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: enums.py
backend/app/ai/clients/: __init__.py  base.py  gemini.py
backend/app/ai/services/: __init__.py  chat.py
backend/app/api/v1/: router.py
backend/app/api/v1/models/: __init__.py  ai.py  items.py
backend/app/db/: base.py  config.py
backend/app/db/models/: item.py
backend/app/db/repositories/: __init__.py  item.py
frontend/app/: package-lock.json
frontend/app/src/app/: globals.css  layout.tsx  page.tsx
frontend/app/src/app/add-items/: page.tsx
frontend/app/src/app/components/: aisidebar.tsx  layout.tsx  sidebar.tsx
frontend/app/src/app/hooks/: useAI.ts  useItemCreation.ts  useItems.ts
frontend/app/src/app/services/: aiService.ts  itemService.ts  types.ts
